<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="@layout/app_background">

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_username_label"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_password_label"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/login_button_label" />

    <CheckBox
        android:id="@+id/rememberMeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"        
        android:text="@string/remember_checkbox_label" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/welcome_notAMember_label"
        android:textColor="#0b84aa"
        android:textSize="20dip" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000" />

    <TextView
        android:id="@+id/anonymousLable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:text="@string/welcome_anonymous_label"
        android:textSize="15dip" />

    <Button
        android:id="@+id/anonymousButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/anonymous_button_label" />

</LinearLayout>