<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="@layout/app_background">

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_username_label"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_password_label"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="textPassword"
        android:singleLine="true" />

     <TextView
        android:id="@+id/emailLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="text"
        android:singleLine="true" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/register_button_label" />

</LinearLayout>