<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/app_background"
    android:orientation="vertical"
    android:padding="10dip" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/nameRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/build_name_label"
                android:textSize="16dip" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:textSize="16dip"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/statusRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/build_status_label"
                android:textSize="16dip" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:textSize="16dip"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/authorRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/authorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/build_author_label"
                android:textSize="16dip" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:textSize="16dip"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/numberRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/numberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/build_number_label"
                android:textSize="16dip" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:textSize="16dip"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/goToBuildUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/build_go_to_url_label"
        android:textColor="#0b84aa"
        android:textSize="18dip" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000" />

    <Button
        android:id="@+id/updateBuild"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/build_update_button_label" />

</LinearLayout>